@@ -24,15 +24,3 @@ gradle.taskGraph.whenReady { taskGraph ->
         task.executable = task.javaLauncher.get().executablePath.asFile.absolutePath
     }
 }
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs("--enable-preview")
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs("--enable-preview")
-}
